package edu.uees.tutorias.domain;

/**
 * Modalidad en que se dicta la tutoria.
 *
 * Se agrego en el incremento 1: una tutoria virtual necesita una sala de
 * videoconferencia, una presencial no.
 */
public enum Modalidad {
    PRESENCIAL,
    VIRTUAL
}
